--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@mdi/font": "^3.6.95",
+    "@mdi/font": "^4.3.95",
     "babel-polyfill": "^6.26.0",
-    "core-js": "^2.6.5",
-    "crostab": "^0.1.13",
-    "roboto-fontface": "*",
-    "veho": "^0.1.3",
+    "core-js": "^3.2.1",
+    "roboto-fontface": "^0.10.0",
+    "veho": "^0.1.7",
     "vue": "^2.6.10",
-    "vuetify": "^2.0.14",
-    "xbrief": "^0.1.20"
+    "vuetify": "^2.0.15",
+    "xbrief": "^0.1.24"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.5.0",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.17.4",
-    "sass-loader": "^7.1.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.3.0",
+    "eslint-plugin-vue": "^5.2.3",
+    "sass": "^1.22.10",
+    "sass-loader": "^7.3.1",
     "vue-cli-plugin-vuetify": "^0.6.3",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.2.2"
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
@@ -43,7 +43,7 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console": "warn",
+      "no-console": "off",
       "no-unused-vars": "warn"
     },
     "parserOptions": {
